--- a/src/SimplePhotoDownloader/SimplePhotoDownloader.csproj
+++ b/src/SimplePhotoDownloader/SimplePhotoDownloader.csproj
@@ -3,8 +3,12 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <FileVersion>0.1.0</FileVersion>
-    <ProductVersion>0.1.0</ProductVersion>
+    <FileVersion>0.2.0</FileVersion>
+    <ProductVersion>0.2.0</ProductVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
 
 </Project>
