--- a/src/MarsRover.PhotoDownloader.Api/appsettings.json
+++ b/src/MarsRover.PhotoDownloader.Api/appsettings.json
@@ -6,5 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MarsRover.PhotoDownload.Api.Settings": {
+    "InitialDatesFilePath": "./dates.txt",
+    "ImagesPath":  "./RoverPhotos"
+  },
+  "MarsRover.PhotoDownloader.Settings": {
+    "ImageCacheLocation": "./RoverPhotos"
+  }
 }
